# flymate

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Dockerfile  README.md
.github/workflows/: release.yml
docs/: release-workflow.md
scripts/: build.sh
src/: logging.cpp  logging.h  main.cpp  settings.cpp  settings.h
